# BackwardChainReasoning

./: .gitignore  Cargo.toml  LICENSE  README.md  kb.json  math.json  reasoning  res.txt
benches/: math_benchmark.rs
examples/AIMA/: knowledge_base.json
examples/math/: math.json  math_theorem.json  res.txt
prolog_ver/: math.pl
src/: bc.rs  bench.rs  cli.rs  lib.rs  main.rs  parser.rs  unify.rs
