[package]
name = "reasoning"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.5.49", features = ["derive"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

[features]
benchmark = []

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "math_benchmark"
harness = false
